added dimens, strings and drawables

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="clr_light_grey">#0B0B0B4D</color>
+    <color name="clr_text_grey">#757575</color>
+    <color name="clr_transparent">#00000000</color>
+    <color name="clr_green">#00CE08</color>
+    <color name="clr_cardview_bg_transparent_color">#1900CE08</color>
 </resources>
