--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,7 +15,9 @@
     <dimen name="padding_30">30dp</dimen>
     <dimen name="padding_50">50dp</dimen>
     <dimen name="padding_60">60dp</dimen>
+    <dimen name="padding_70">70dp</dimen>
 
+    <dimen name="dimen_text_size_smallest">8sp</dimen>
     <dimen name="dimen_text_size_very_small">10sp</dimen>
     <dimen name="dimen_text_size_small">12sp</dimen>
     <dimen name="dimen_text_size_medium">18sp</dimen>
